# WhereShoppingList

./: .gitignore  docker-compose.dev.yaml  docker-compose.yaml  go.work  go.work.sum  notes.txt  readme.md
api/: Dockerfile  go.mod  go.sum  go.work  main.go
api/auth/: controller.go  dto.go  go.mod  middleware.go  router.go  token.go
api/controller/: scraper.go
api/core/: dependencies.go  go.mod  utils.go
api/db/: conn.go  go.mod  migrate.go
api/dto/: dto.go
api/models/: go.mod  models.go
api/src/: db.go  go.mod  go.sum  go.work  main.go
api/src/controller/: crud.go  go.mod  scraper.go
api/src/db/: conn.go  go.mod  models.go
api/src/dto/: dto.go
api/src/models/: models.go
api/v1/: go.mod  router.go
api/v1/controller/: crud.go  scraper.go
api/v1/dto/: dto.go  go.mod
app/: package-lock.json  package.json
app/frontend/: package-lock.json
app/src/components/: HelloWorld.vue
connector/shopping_list_connector/: connector.py
db/: Dockerfile  init_db.sql
scrape/: .dockerignore  Dockerfile
scrape/albert_heijn/: Cargo.toml
scrape/albert_heijn/src/: albert_heijn_scraper.rs  lib.rs  parse.rs
scrape/core/: Cargo.toml
scrape/core/src/: config.rs  connector.rs  connectors.rs  data.rs  error.rs  interface.rs  lib.rs  product_info.rs  rate_limiter.rs  req.rs  result_collector.rs  scrape_utils.rs
scrape/core/src/constants/: mod.rs  user_agents.rs
scrape/jumbo/: Cargo.toml
scrape/jumbo/src/: jumbo_scraper.rs  lib.rs  parse.rs  utils.rs
scrape/scraper/: Cargo.toml  host.json  output.txt  run.sh
scrape/scraper/src/: funcs.rs  main.rs  response.rs  state.rs
scrape/sql/: Cargo.toml
scrape/sql/src/: conn.rs  lib.rs  tables.rs
