[package]
name = "scrape_core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.18.1"
reqwest = { version = "0.11.23", features = ["gzip"] }
thiserror = "1"
futures = "0.3.30"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"