[package]
name = "jumbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrape_core = { path = "../core" }
thiserror = "1"
anyhow = "1"
scraper = "0.18.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
log = "0.4.20"