[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrape_core = { path = "../core" }
jumbo = { path = "../jumbo" }
sql = { path = "../sql" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
scraper = "0.18.1"