[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scraper"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrape_core = { path = "../core" }
jumbo = { path = "../jumbo" }
sql = { path = "../sql" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
scraper = "0.18.1"
warp = "0.3"
simple_logger = "4.3.3"
log = "0.4.20"
serde_json = "1"
serde = "1.0.195"